--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "niklasravnsborg/laravel-pdf": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
